--- a/apps/fleet_manager/index.html
+++ b/apps/fleet_manager/index.html
@@ -3,8 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Fleet Manager - Mecalux AMR</title>
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+      html {
+        font-size: 14px !important;
+        zoom: 1;
+        -webkit-text-size-adjust: none;
+        -moz-text-size-adjust: none;
+        text-size-adjust: none;
+      }
+      body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        overflow-x: hidden;
+        zoom: 1 !important;
+        transform: scale(1);
+        transform-origin: 0 0;
+      }
+      #root {
+        width: 100%;
+        min-height: 100vh;
+        zoom: 1 !important;
+      }
+    </style>
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
     <!-- Font Awesome Icons -->
